Wed Aug 13 11:55:15 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Truncate.h:
          Added missing specializations for Borland C++.

Wed Aug 13 11:44:15 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * rpmbuild/ace-tao-ciao.txt:
          Made several improvements to this new spec file. Thanks to
          Philipp Thomas <pth at suse dot de> for assisting with this

Tue Aug 12 19:45:16 UTC 2008  Jeff Parsons <j.parsons@vanderbilt.edu>

        * ace/Time_Value.inl:
        * examples/OS/Process/process.cpp:
        * examples/Misc/test_dump.h:
        * examples/ASX/Event_Server/Event_Server/Supplier_Router.cpp:
        * examples/ASX/Event_Server/Event_Server/Event_Analyzer.cpp:
        * examples/ASX/Event_Server/Event_Server/Consumer_Router.cpp:
        * examples/ASX/Message_Queue/buffer_stream.cpp:
        * examples/ASX/Message_Queue/bounded_buffer.cpp:
        * examples/ASX/Message_Queue/priority_buffer.cpp:
        * examples/ASX/UPIPE_Event_Server/Supplier_Router.cpp:
        * examples/ASX/UPIPE_Event_Server/Event_Analyzer.cpp:
        * examples/ASX/UPIPE_Event_Server/event_server.cpp:
        * examples/ASX/UPIPE_Event_Server/Consumer_Router.cpp:
        * examples/Web_Crawler/Iterators.cpp:
        * examples/Web_Crawler/URL_Visitor.cpp:
        * examples/Web_Crawler/Mem_Map_Stream.cpp:
        * examples/Shared_Malloc/test_malloc.cpp:
        * examples/QOS/Simple/Sender_QoS_Event_Handler.cpp:
        * examples/APG/ThreadPools/TP_Reactor.cpp:
        * examples/IPC_SAP/FILE_SAP/client.cpp:
        * examples/IPC_SAP/SOCK_SAP/CPP-inclient.cpp:
        * examples/IPC_SAP/SPIPE_SAP/NPClient.cpp:
        * examples/IPC_SAP/SSL_SAP/SSL-server-fancy.cpp:
        * examples/IPC_SAP/SSL_SAP/SSL-client-simple.cpp:
        * examples/IPC_SAP/SSL_SAP/SSL-client.cpp:
        * examples/IPC_SAP/FIFO_SAP/FIFO-client.cpp:
        * examples/Logger/client/logging_app.cpp: