@@ -2,7 +2,7 @@
 #---------------------------------------------------------------------------
 AC_DEFUN([ACE_CHECK_HAS_FUNCS],
 [AC_FOREACH([ACE_Func], [$1],
-  [AH_TEMPLATE(AS_TR_CPP(ACE_HAS_[]ACE_Func),
+  [AH_TEMPLATE([AS_TR_CPP(ACE_HAS_[]ACE_Func)],
                [Define to 1 if platform has ]ACE_Func[().])])dnl
 for ace_func in $1
 do
@@ -16,7 +16,7 @@ done
 #-----------------------------------------------------------------------------
 AC_DEFUN([ACE_CHECK_LACKS_FUNCS],
 [AC_FOREACH([ACE_Func], [$1],
-  [AH_TEMPLATE(AS_TR_CPP(ACE_LACKS_[]ACE_Func),
+  [AH_TEMPLATE([AS_TR_CPP(ACE_LACKS_[]ACE_Func)],
                [Define to 1 if platform lacks ]ACE_Func[().])])dnl
 for ace_func in $1
 do
